--- a/views/user/create-group-test.hbs
+++ b/views/user/create-group-test.hbs
@@ -1,4 +1,4 @@
-<div class="container-login">
+<div class="container-login" style="display: flex;">
   <div class="col p-0 bg-custom d-flex justify-content-center align-items-center flex-column w-100">
     <form class="w-75" action="/user-profile/create-test" method="POST">
       <div class="mb-3">
