--- a/views/user/choose-tests.hbs
+++ b/views/user/choose-tests.hbs
@@ -12,47 +12,76 @@
 
 <h1>{{this.groupTest.name}}</h1>
 
-<div class="album py-5 bg-light">
-  <div class="container">
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" style="width: 100%;">
+
+
+<section class="py-10">
+  <div class="container mx-auto">
+    <div style="width: 1400px;" class="flex flex-wrap px-6">
       {{#each this.aggTest}}
-      <div class="col">
-        <div class="card shadow-sm">
-          <img class="bd-placeholder-img card-img-top" src="../{{this.url}}" width="50px" height="200px" />
-          <div class="card-body">
-            <h5 class="card-title header-test">{{this.name}}</h5>
-            <p class="card-text">{{this.description}}</p>
-            <div class="d-flex justify-content-between align-items-center">
-              <div class="btn-group">
-                <form action="/user-profile/create-test/{{../this.groupTest._id}}" method="POST">
-                  <input type="hidden" name="idTestErase" value="{{this._id}}">
-                  <button type="submit" style="background-color: red;">Quitar</button>
-                </form>
-              </div>
-              <small class="text-muted">{{this.duration}} minutes</small>
-            </div>
+      <div style="width: 400px; display: flex; justify-content: space-between; align-content: space-between;"
+        class="w-full lg:w-1/2   md:px-4 lg:px-6 py-5">
+        <div style="width: 100%;" class="bg-white hover:shadow-xl">
+          <div class="">
+            <img src="../{{this.url}}" alt="{{name}}" class="h-56 w-full border-white border-8 hover:opacity-25">
           </div>
-        </div>
-        {{/each}}
-        {{#each this.missingTest}}
-        <div class="col">
-          <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top" src="../{{this.url}}" width="50px" height="200px" />
-            <div class="card-body">
-              <h5 class="card-title header-test">{{this.name}}</h5>
-              <p class="card-text">{{this.description}}</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <form action="/user-profile/create-test/{{../this.groupTest._id}}" method="POST">
-                    <input type="hidden" name="idTestAdd" value="{{this._id}}">
-                    <button type="submit" style="background-color: #0d6efd;">Agregar</button>
+          <div style="box-sizing: content-box;" class="px-4 py-4 md:px-10">
+            <h1 class="font-bold text-lg">
+              {{name}}
+            </h1>
+            <p class="py-4">
+              {{description}}
+            </p>
+            <div style="justify-content: space-evenly;" class="flex pt-8">
+              <div class="2/3">
+                <div class="text-sm font-medium">
+                  <form class="inline-block" action="/user-profile/create-test/{{../this.groupTest._id}}" method="POST">
+                    <input type="hidden" name="idTestErase" value="{{this._id}}">
+                    <button class="inline-block  text-white 
+                            bg-red-400 hover:bg-red-500 duration-300 
+                            text-xs font-bold 
+                            mr-1 md:mr-2 mb-2 px-2 md:px-4 py-1 
+                            opacity-90 hover:opacity-100" type="submit" style="background-color: red;">Quitar</button>
                   </form>
                 </div>
-                <small class="text-muted">{{this.duration}} minutes</small>
               </div>
             </div>
           </div>
-          {{/each}}
         </div>
       </div>
+      {{/each}}
+      {{#each this.missingTest}}
+      <div style="width: 400px; display: flex; justify-content: space-between; align-content: space-between;"
+        class="w-full lg:w-1/2   md:px-4 lg:px-6 py-5">
+        <div style="width: 100%;" class="bg-white hover:shadow-xl">
+          <div class="">
+            <img src="../{{this.url}}" alt="" class="h-56 w-full border-white border-8 hover:opacity-25">
+          </div>
+          <div class="px-4 py-4 md:px-10">
+            <h1 class="font-bold text-lg">
+              {{name}}
+            </h1>
+            <p class="py-4">
+              {{description}}
+            </p>
+            <div style="justify-content: space-evenly;" class="flex pt-8">
+              <div class="2/3">
+                <div class="text-sm font-medium">
+                  <form class="inline-block" action="/user-profile/create-test/{{../this.groupTest._id}}" method="POST">
+                    <input type="hidden" name="idTestAdd" value="{{this._id}}">
+                    <button class="inline-block  text-white 
+                            bg-red-400 hover:bg-red-500 duration-300 
+                            text-xs font-bold 
+                            mr-1 md:mr-2 mb-2 px-2 md:px-4 py-1 
+                            opacity-90 hover:opacity-100" type="submit"
+                      style="background-color:#0d6efd;">Agregar</button>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      {{/each}}
     </div>
+  </div>
+</section>
