It is deploy for presenting

--- a/views/user/choose-tests.hbs
+++ b/views/user/choose-tests.hbs
@@ -1,26 +1,86 @@
-<button><a href="/user-profile" style="color: black;">Guardar</a></button>
+<nav style="background-color: #4f46E6;" class="bg-gray-800">
+  <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
+    <div class="relative flex items-center justify-between h-16">
+      <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
+        <!-- Mobile menu button-->
+        <button
+          class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
+          aria-expanded="false">
+          <span class="sr-only">Open main menu</span>
+        </button>
+      </div>
+      <div class="flex-1 flex items-center justify-between sm:items-stretch sm:justify-between">
+        <div class="flex justify-between">
+          <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
+          <div>
+            <p class="text-white block py-2 text-base text-lg">
+              <a href="/user-profile">Regresar</a>
+          </div>
+        </div>
+        <div class="flex justify-between">
+          <div class="flex items-center text-white ml-500">
+            <form action="/logout" method="POST">
+              <button type="submit">Cerrar Sesion</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
+    </div>
+  </div>
+  </div>
 
-<form action="/user-profile/create-test/{{this.groupTest._id}}" method="POST">
-  <input type="email" name="testerEmail" placeholder="Agregar Correo de Aplicantes"
-    pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 4}">
-  <button type="submit">Agregar</button>
+  <!--
+    Mobile menu, toggle classes based on menu state.
+
+    Menu open: "block", Menu closed: "hidden"
+  -->
+  <div class="hidden sm:hidden">
+    <div class="px-2 pt-2 pb-3 space-y-1">
+      <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
+      <a href="/"
+        class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Inicio</a>
+    </div>
+  </div>
+</nav>
+<div style="padding-bottom:20px;" class="flex items-center my-2">
+  <div class="m-3">
+    <button
+      class="text-gray-800 font-bold rounded border-b-2 border-blue-500 hover:border-blue-800 hover:bg-blue-300 hover:text-white shadow-md py-2 px-6 inline-flex items-center">
+      <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
+        <path d="M11 11v-11h1v11h11v1h-11v11h-1v-11h-11v-1h11z" />
+      </svg>
+      <a class="ml-2" href="/user-profile" style="color: black;">Guardar</a>
+    </button>
+  </div>
+  <div class="flex justify-center items-center w-full">
+    <h1 style="margin-right: 350px;font-size: larger;font-size: 30px;"><strong>{{this.groupTest.name}}</strong></h1>
+  </div>
+</div>
+
+<form style="display: flex;flex-direction: column;justify-content: center" method="POST"
+  action="/user-profile/create-test/{{this.groupTest._id}}">
+  <div style="display: flex;justify-content: center" class="mb-3">
+    <input style="text-align: center;width:50%" type="email" class="form-control" id="exampleInputEmail1"
+      name="testerEmail" placeholder="Agregar correo del aplicante" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 4}">
+    <button style="width: 20%; margin-left:10px ;" type="submit" class="btn btn-primary">Agregar</button>
+  </div>
 </form>
-
 {{#if this.errorMessage}}
 <p>{{this.errorMessage}}</p>
 {{/if}}
 
-<h1>{{this.groupTest.name}}</h1>
 
 
 
-<section class="py-10">
-  <div class="container mx-auto">
-    <div style="width: 1400px;" class="flex flex-wrap px-6">
+<section class="py-1">
+  <div class="flex container mx-auto">
+    <div style="justify-content: space-evenly;" class="flex flex-wrap px-6">
       {{#each this.aggTest}}
-      <div style="width: 400px; display: flex; justify-content: space-between; align-content: space-between;"
-        class="w-full lg:w-1/2   md:px-4 lg:px-6 py-5">
-        <div style="width: 100%;" class="bg-white hover:shadow-xl">
+      <div style="width: 400px;display: flex; justify-content: space-around; align-content: space-between;"
+        class="w-full lg:w-1/2  md:px-4 lg:px-6 py-3">
+        <div class="bg-white hover:shadow-xl border-red-900">
           <div class="">
             <img src="../{{this.url}}" alt="{{name}}" class="h-56 w-full border-white border-8 hover:opacity-25">
           </div>
@@ -50,9 +110,9 @@
       </div>
       {{/each}}
       {{#each this.missingTest}}
-      <div style="width: 400px; display: flex; justify-content: space-between; align-content: space-between;"
-        class="w-full lg:w-1/2   md:px-4 lg:px-6 py-5">
-        <div style="width: 100%;" class="bg-white hover:shadow-xl">
+      <div style="width: 400px;display: flex; justify-content: space-around; align-content: space-between;"
+        class="w-full lg:w-1/2  md:px-4 lg:px-6 py-3">
+        <div class="bg-white hover:shadow-xl border-red-900">
           <div class="">
             <img src="../{{this.url}}" alt="" class="h-56 w-full border-white border-8 hover:opacity-25">
           </div>
